# coding_agent_supervision_101

./: .gitignore  README.md  course_app.py  custom.css  pyproject.toml
content/: answer_key.md  course_guide.md  git_diff_cheat_sheet.md  glossary.md  quick_reference.md  testing_verification_cheat_sheet.md  workbook.md
verification/baseline_after_initial_load/: snapshot.md
verification/deliverable_1/: header_nav_snapshot.md
verification/deliverable_2/: after_guided_click_snapshot.md  guided_learning_path_snapshot.md  nav_snapshot.md
verification/deliverable_4/: classification_and_prompt_snapshot.md
verification/deliverable_5/: glossary_cards_snapshot.md
