[project]
name = "coding-agent-supervision-101"
version = "0.1.0"
description = "Interactive Marimo notebook app for Coding Agent Supervision for Non-Developers."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "marimo>=0.13.0",
]

[tool.marimo.runtime]
auto_instantiate = true

[tool.ruff]
line-length = 100
